--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                   <p class="nag-wek">Music</p>
                   <h2 class="project-title">„Huxwell - You Got Me (For Life)”</h2>
                   <p class="project-description">What I did: audio production, mix, mastering, artwork, visualizer, marketing.</p>
-                  <a data-w-id="68e3445f-9264-c8cf-de0e-3dac8dbdaeae" href="https://www.youtube.com/watch?v=l6PKTgNyPY4" target="_blank" class="button w-button">Click here to view on YouTube</a>
+                  <a data-w-id="68e3445f-9264-c8cf-de0e-3dac8dbdaeae" href="https://www.youtube.com/watch?v=gUx3402jSh0" target="_blank" class="button w-button">Click here to view on YouTube</a>
                </div>
             </div>
          </div>
