--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                <div id="w-node-_817923d0-a531-ae2d-5240-173f1c592ef2-d88da403" class="left-div">
                   <h1 class="heading">About me</h1>
                   <p class="paragraph">Hello and welcome to my portfolio!<br/></p>
-                  <p class="paragraph">I&#x27;m an acoustic engineer with post-production experience in audio and video across many sectors.</p>
+                  <p class="paragraph">I&#x27;m an acoustic engineer with post-production experience in audio and video across multiple domains.</p>
                   <p class="paragraph">Audio Production:<br/>- Original music composition<br/>- Electronic music mixing and mastering<br/>- Voice-over post-production<br/>- Original movie soundtrack composition<br/></p>
                   <p class="paragraph">Video Production:<br/>- Video editing and post-production<br/>- Music video editing<br/>- Collaborative filmmaking with the bezuad collective<br/></p>
                   <p class="paragraph">I approach every project with enthusiasm and creativity, delivering high quality work to meet my clients&#x27; needs. Feel free to explore my portfolio and contact me if you want to work together!</p>
