--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                   <h1 class="heading">About me</h1>
                   <p class="paragraph">Hello and welcome to my portfolio!<br/></p>
                   <p class="paragraph">I&#x27;m an acoustic engineer with post-production experience in audio and video across multiple domains.</p>
-                  <p class="paragraph">Audio Production:<br/>- Original music composition<br/>- Electronic music mixing and mastering<br/>- Voice-over post-production<br/>- Original movie soundtrack composition<br/></p>
-                  <p class="paragraph">Video Production:<br/>- Video editing and post-production<br/>- Music video editing<br/>- Collaborative filmmaking with the bezuad collective<br/></p>
+                  <p class="paragraph">Audio:<br/>- Original music composition<br/>- Electronic music mixing and mastering<br/>- Voiceover post-production<br/>- Movie soundtrack composition<br/></p>
+                  <p class="paragraph">Video:<br/>- Video editing and post-production<br/>- Music video editing<br/>- Collaborative filmmaking with the bezuad collective<br/></p>
                   <p class="paragraph">I approach every project with enthusiasm and creativity, delivering high quality work to meet my clients&#x27; needs. Feel free to explore my portfolio and contact me if you want to work together!</p>
                </div>
                <div id="w-node-_16c5eda0-421c-0b55-3261-aa1b14ed3708-d88da403" class="left-div"><img src="images/profile-3.jpg" loading="lazy" id="w-node-fd2b676f-313a-442f-2836-9d6f7dd36a18-d88da403" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" alt="" srcset="images/profile-3-p-500.jpg 500w, images/profile-3-p-800.jpg 800w, images/profile-3-p-1080.jpg 1080w, images/profile-3-p-1600.jpg 1600w, images/profile-3-p-2000.jpg 2000w, images/profile-3-p-2600.jpg 2600w, images/profile-3-p-3200.jpg 3200w, images/profile-3.jpg 3556w"/></div>
