--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                   <h1 class="heading">About me</h1>
                   <p class="paragraph">Hello and welcome to my portfolio!<br/></p>
                   <p class="paragraph">I&#x27;m an acoustic engineer with post-production experience in audio and video across multiple domains.</p>
-                  <p class="paragraph">Audio:<br/>- Original music composition<br/>- Electronic music mixing and mastering<br/>- Voiceover post-production<br/>- Movie soundtrack composition<br/></p>
+                  <p class="paragraph">Audio:<br/>- Original music composition<br/>- Electronic music mixing and mastering<br/>- Voice-over post-production<br/>- Movie soundtrack composition<br/></p>
                   <p class="paragraph">Video:<br/>- Video editing and post-production<br/>- Music video editing<br/>- Collaborative filmmaking with the bezuad collective<br/></p>
                   <p class="paragraph">I approach every project with enthusiasm and creativity, delivering high quality work to meet my clients&#x27; needs. Feel free to explore my portfolio and contact me if you want to work together!</p>
                </div>
